--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "odin-js-template",
-  "version": "1.2.0",
-  "description": "",
+  "name": "odin-weather-app",
+  "version": "0.2.0",
+  "description": "Simple weather app for practice async code",
   "private": true,
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
